--- a/work/MainWindow.xaml
+++ b/work/MainWindow.xaml
@@ -13,8 +13,27 @@
             <!--<Setter Property="Height" Value="100"/>-->
             <!--<Setter Property="Background" Value="Yellow"/>-->
             <Setter Property="Visibility" Value="Hidden"/>
-            
+            <Setter Property="Background">
+                <Setter.Value>
+                    <ImageBrush ImageSource="Images/OIP-C1.jpg"/>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="{Binding ActualWidth,ElementName=Button00}">
+                            <!-- 使边缘圆形 -->
+                            <ContentPresenter HorizontalAlignment="Center"
+                                              VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
+      
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -31,7 +50,7 @@
 
         </Grid.RowDefinitions>
         <Canvas x:Name="myCanvas" Background="Aqua" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Grid.RowSpan="3" MouseLeftButtonDown="myCanvas_MouseLeftButtonDown" SizeChanged="myCanvas_SizeChanged">
-            <Grid Background="Red"   Width="{Binding ActualWidth,ElementName=myCanvas}" Height="{Binding ActualHeight,ElementName=myCanvas}">
+            <Grid Background="#81D8CF"   Width="{Binding ActualWidth,ElementName=myCanvas}" Height="{Binding ActualHeight,ElementName=myCanvas}">
                 <Grid.RowDefinitions >
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
@@ -49,6 +68,7 @@
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
             <Button Grid.Column="0" Grid.Row="0"  x:Name="Button00" Style="{StaticResource commonBtnStyle}" />
             <Button Grid.Column="1" Grid.Row="0" x:Name="Button01" Style="{StaticResource commonBtnStyle}" />
@@ -57,6 +77,7 @@
             <Button Grid.Column="4" Grid.Row="0" x:Name="Button04" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="5" Grid.Row="0"  x:Name="Button05" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="6" Grid.Row="0" x:Name="Button06" Style="{StaticResource commonBtnStyle}" />
+                <Button Grid.Column="7" Grid.Row="0" x:Name="Button07" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="0" Grid.Row="1" x:Name="Button10" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="1" Grid.Row="1" x:Name="Button11" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="2" Grid.Row="1" x:Name="Button12" Style="{StaticResource commonBtnStyle}" />
@@ -64,6 +85,7 @@
                 <Button Grid.Column="4" Grid.Row="1" x:Name="Button14" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="5" Grid.Row="1" x:Name="Button15" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="6" Grid.Row="1" x:Name="Button16" Style="{StaticResource commonBtnStyle}" />
+                <Button Grid.Column="7" Grid.Row="1" x:Name="Button17" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="0" Grid.Row="2" x:Name="Button20" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="1" Grid.Row="2"  x:Name="Button21" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="2" Grid.Row="2" x:Name="Button22" Style="{StaticResource commonBtnStyle}" />
@@ -71,6 +93,7 @@
                 <Button Grid.Column="4" Grid.Row="2" x:Name="Button24" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="5" Grid.Row="2" x:Name="Button25" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="6" Grid.Row="2"  x:Name="Button26" Style="{StaticResource commonBtnStyle}" />
+                <Button Grid.Column="7" Grid.Row="2" x:Name="Button27" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="0" Grid.Row="3" x:Name="Button30" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="1" Grid.Row="3" x:Name="Button31" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="2" Grid.Row="3" x:Name="Button32" Style="{StaticResource commonBtnStyle}" />
@@ -78,6 +101,7 @@
                 <Button Grid.Column="4" Grid.Row="3"  x:Name="Button34" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="5" Grid.Row="3" x:Name="Button35" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="6" Grid.Row="3" x:Name="Button36" Style="{StaticResource commonBtnStyle}" />
+                <Button Grid.Column="7" Grid.Row="3" x:Name="Button37" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="0" Grid.Row="4" x:Name="Button40" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="1" Grid.Row="4" x:Name="Button41" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="2" Grid.Row="4"  x:Name="Button42" Style="{StaticResource commonBtnStyle}" />
@@ -85,6 +109,7 @@
                 <Button Grid.Column="4" Grid.Row="4" x:Name="Button44" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="5" Grid.Row="4" x:Name="Button45" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="6" Grid.Row="4" x:Name="Button46" Style="{StaticResource commonBtnStyle}" />
+                <Button Grid.Column="7" Grid.Row="4" x:Name="Button47" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="0" Grid.Row="5"  x:Name="Button50" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="1" Grid.Row="5" x:Name="Button51" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="2" Grid.Row="5" x:Name="Button52" Style="{StaticResource commonBtnStyle}" />
@@ -92,6 +117,7 @@
                 <Button Grid.Column="4" Grid.Row="5" x:Name="Button54" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="5" Grid.Row="5"  x:Name="Button55" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="6" Grid.Row="5" x:Name="Button56" Style="{StaticResource commonBtnStyle}" />
+                <Button Grid.Column="7" Grid.Row="5" x:Name="Button57" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="0" Grid.Row="6" x:Name="Button60" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="1" Grid.Row="6" x:Name="Button61" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="2" Grid.Row="6" x:Name="Button62" Style="{StaticResource commonBtnStyle}" />
@@ -99,6 +125,7 @@
                 <Button Grid.Column="4" Grid.Row="6" x:Name="Button64" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="5" Grid.Row="6" x:Name="Button65" Style="{StaticResource commonBtnStyle}" />
                 <Button Grid.Column="6" Grid.Row="6" x:Name="Button66" Style="{StaticResource commonBtnStyle}" />
+                <Button Grid.Column="7" Grid.Row="6" x:Name="Button67" Style="{StaticResource commonBtnStyle}" />
              
             </Grid>
         </Canvas>
