feat/更改界面结构

--- a/work/Pages/AI.xaml
+++ b/work/Pages/AI.xaml
@@ -1,13 +1,12 @@
-﻿<Page x:Class="work.Pages.MainPage"
+﻿<Page x:Class="work.Pages.AI"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:work.Pages"
-     xmlns:work="clr-namespace:work"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="MainPage">
+      Title="AI">
 
     <Page.Resources>
         <Style TargetType="Button" x:Key="commonBtnStyle">
@@ -16,52 +15,51 @@
             <!--<Setter Property="Height" Value="100"/>-->
             <!--<Setter Property="Background" Value="Yellow"/>-->
             <Setter Property="Visibility" Value="Hidden"/>
-            
+
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
                         <Border Background="{TemplateBinding Background}"
-                               BorderBrush="{TemplateBinding BorderBrush}"
-                               BorderThickness="{TemplateBinding BorderThickness}"
-                               CornerRadius="{Binding ActualWidth,ElementName=Button00}">
+                           BorderBrush="{TemplateBinding BorderBrush}"
+                           BorderThickness="{TemplateBinding BorderThickness}"
+                           CornerRadius="{Binding ActualWidth,ElementName=Button00}">
                             <!-- 使边缘圆形 -->
                             <ContentPresenter HorizontalAlignment="Center"
-                                             VerticalAlignment="Center"/>
+                                         VerticalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
-    
+
     </Page.Resources>
 
-        <Grid Background="White">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
+    <Grid Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
+        <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
 
-            <StackPanel x:Name="leftStack" Grid.Row="1" Grid.Column="1" Grid.RowSpan="6" Background="Beige">
-                <Button x:Name="HistoryBtn"  Content="历史记录" Background="Gold" Height="100" Click="jumpToHistory" />
-            <Button x:Name="AIBtn"  Content="人机对战" Background="Gold" Height="100" Click="jumpToAI"/>
-            <Button x:Name="PeopleBtn"  Content="人人对战" Background="Gold" Height="100" Click="jumpToHistory"/>
+        <StackPanel x:Name="leftStack" Grid.Row="1" Grid.Column="1" Grid.RowSpan="6" Background="Beige">
+            <Label Content="人机对战界面" HorizontalAlignment="Center"></Label>
+            <Button Background="AliceBlue" Content="返回主页"  Click="jumpBackToMain"></Button>
         </StackPanel>
 
         <Grid Background="Bisque" x:Name="myCanvasFatherGrid" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="6" Grid.RowSpan="6" >
@@ -133,6 +131,9 @@
                     <Button Grid.Column="4" Grid.Row="5" x:Name="Button54" Style="{StaticResource commonBtnStyle}" />
                     <Button Grid.Column="5" Grid.Row="5"  x:Name="Button55" Style="{StaticResource commonBtnStyle}" />
                     <Button Grid.Column="6" Grid.Row="5" x:Name="Button56" Style="{StaticResource commonBtnStyle}" />
+
+
+
 
                 </Grid>
             </Canvas>
