--- a/work/Pages/MainPage.xaml
+++ b/work/Pages/MainPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:work.Pages"
      xmlns:work="clr-namespace:work"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="800" d:DesignWidth="900"
       Title="MainPage">
 
     <Page.Resources>
@@ -32,7 +32,26 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    
+        <Style x:Key="ctrlButton" TargetType="Button">
+            <Setter Property="Background" Value="#E7E0F8"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="Padding" Value="10"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}"
+                 BorderBrush="{TemplateBinding BorderBrush}"
+                 BorderThickness="{TemplateBinding BorderThickness}"
+                 CornerRadius="20">
+                            <ContentPresenter HorizontalAlignment="Center"
+                               VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Page.Resources>
 
         <Grid Background="White">
@@ -58,83 +77,85 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
 
-            <StackPanel x:Name="leftStack" Grid.Row="1" Grid.Column="1" Grid.RowSpan="6" Background="Beige">
-                <Button x:Name="HistoryBtn"  Content="历史记录" Background="Gold" Height="100" Click="jumpToHistory" />
-            <Button x:Name="AIBtn"  Content="人机对战" Background="Gold" Height="100" Click="jumpToAI"/>
-            <Button x:Name="PeopleBtn"  Content="人人对战" Background="Gold" Height="100" Click="jumpToHistory"/>
-        </StackPanel>
 
-        <Grid Background="Bisque" x:Name="myCanvasFatherGrid" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="6" Grid.RowSpan="6" >
-            <Canvas  x:Name="myCanvas" Background="Aqua"  MouseLeftButtonDown="myCanvas_MouseLeftButtonDown" SizeChanged="myCanvas_SizeChanged" Height="{Binding ActualHeight,ElementName=myCanvasFatherGrid}" Width="{Binding CanvasWidth}">
-                <Grid Background="#81D8CF"   Width="{Binding ActualWidth,ElementName=myCanvas}" Height="{Binding ActualHeight,ElementName=myCanvas}">
-                    <Grid.RowDefinitions >
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+        <Button Grid.Column="3" Grid.Row="7" x:Name="HistoryBtn"  Content="历史记录"  Height="100" Click="jumpToHistory" Style="{StaticResource ctrlButton}"/>
+        <Button Grid.Column="4" Grid.Row="7" x:Name="AIBtn"  Content="人机对战" Height="100" Click="jumpToAI" Style="{StaticResource ctrlButton}"/>
+        <Button Grid.Column="5" Grid.Row="7" x:Name="PeopleBtn"  Content="人人对战" Height="100" Click="jumpToHistory" Style="{StaticResource ctrlButton}"/>
+        
 
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
+        <Grid x:Name="myCanvasFatherGrid" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="7" Grid.RowSpan="6" >
+            <Canvas  x:Name="myCanvas" MouseLeftButtonDown="myCanvas_MouseLeftButtonDown" SizeChanged="myCanvas_SizeChanged" Height="{Binding ActualHeight,ElementName=myCanvasFatherGrid}" Width="{Binding CanvasWidth}">
+                <Border CornerRadius="30" BorderBrush="Transparent" BorderThickness="1" Background="#E0F5F8">
+                    <Grid Width="{Binding ActualWidth,ElementName=myCanvas}" Height="{Binding ActualHeight,ElementName=myCanvas}">
+                        <Grid.RowDefinitions >
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
 
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" Grid.Row="0"  x:Name="Button00" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="1" Grid.Row="0" x:Name="Button01" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="2" Grid.Row="0" x:Name="Button02" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="3" Grid.Row="0" x:Name="Button03" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="4" Grid.Row="0" x:Name="Button04" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="5" Grid.Row="0"  x:Name="Button05" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="6" Grid.Row="0" x:Name="Button06" Style="{StaticResource commonBtnStyle}" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
 
-                    <Button Grid.Column="0" Grid.Row="1" x:Name="Button10" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="1" Grid.Row="1" x:Name="Button11" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="2" Grid.Row="1" x:Name="Button12" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="3" Grid.Row="1"  x:Name="Button13" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="4" Grid.Row="1" x:Name="Button14" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="5" Grid.Row="1" x:Name="Button15" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="6" Grid.Row="1" x:Name="Button16" Style="{StaticResource commonBtnStyle}" />
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0" Grid.Row="0"  x:Name="Button00" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="0" x:Name="Button01" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="0" x:Name="Button02" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="0" x:Name="Button03" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="0" x:Name="Button04" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="0"  x:Name="Button05" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="0" x:Name="Button06" Style="{StaticResource commonBtnStyle}" />
 
-                    <Button Grid.Column="0" Grid.Row="2" x:Name="Button20" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="1" Grid.Row="2"  x:Name="Button21" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="2" Grid.Row="2" x:Name="Button22" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="3" Grid.Row="2" x:Name="Button23" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="4" Grid.Row="2" x:Name="Button24" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="5" Grid.Row="2" x:Name="Button25" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="6" Grid.Row="2"  x:Name="Button26" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="0" Grid.Row="1" x:Name="Button10" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="1" x:Name="Button11" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="1" x:Name="Button12" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="1"  x:Name="Button13" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="1" x:Name="Button14" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="1" x:Name="Button15" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="1" x:Name="Button16" Style="{StaticResource commonBtnStyle}" />
 
-                    <Button Grid.Column="0" Grid.Row="3" x:Name="Button30" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="1" Grid.Row="3" x:Name="Button31" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="2" Grid.Row="3" x:Name="Button32" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="3" Grid.Row="3" x:Name="Button33" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="4" Grid.Row="3"  x:Name="Button34" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="5" Grid.Row="3" x:Name="Button35" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="6" Grid.Row="3" x:Name="Button36" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="0" Grid.Row="2" x:Name="Button20" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="2"  x:Name="Button21" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="2" x:Name="Button22" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="2" x:Name="Button23" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="2" x:Name="Button24" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="2" x:Name="Button25" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="2"  x:Name="Button26" Style="{StaticResource commonBtnStyle}" />
 
-                    <Button Grid.Column="0" Grid.Row="4" x:Name="Button40" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="1" Grid.Row="4" x:Name="Button41" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="2" Grid.Row="4"  x:Name="Button42" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="3" Grid.Row="4" x:Name="Button43" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="4" Grid.Row="4" x:Name="Button44" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="5" Grid.Row="4" x:Name="Button45" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="6" Grid.Row="4" x:Name="Button46" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="0" Grid.Row="3" x:Name="Button30" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="3" x:Name="Button31" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="3" x:Name="Button32" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="3" x:Name="Button33" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="3"  x:Name="Button34" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="3" x:Name="Button35" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="3" x:Name="Button36" Style="{StaticResource commonBtnStyle}" />
 
-                    <Button Grid.Column="0" Grid.Row="5"  x:Name="Button50" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="1" Grid.Row="5" x:Name="Button51" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="2" Grid.Row="5" x:Name="Button52" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="3" Grid.Row="5" x:Name="Button53" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="4" Grid.Row="5" x:Name="Button54" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="5" Grid.Row="5"  x:Name="Button55" Style="{StaticResource commonBtnStyle}" />
-                    <Button Grid.Column="6" Grid.Row="5" x:Name="Button56" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="0" Grid.Row="4" x:Name="Button40" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="4" x:Name="Button41" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="4"  x:Name="Button42" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="4" x:Name="Button43" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="4" x:Name="Button44" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="4" x:Name="Button45" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="4" x:Name="Button46" Style="{StaticResource commonBtnStyle}" />
 
-                </Grid>
+                        <Button Grid.Column="0" Grid.Row="5"  x:Name="Button50" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="1" Grid.Row="5" x:Name="Button51" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="2" Grid.Row="5" x:Name="Button52" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="3" Grid.Row="5" x:Name="Button53" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="4" Grid.Row="5" x:Name="Button54" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="5" Grid.Row="5"  x:Name="Button55" Style="{StaticResource commonBtnStyle}" />
+                        <Button Grid.Column="6" Grid.Row="5" x:Name="Button56" Style="{StaticResource commonBtnStyle}" />
+
+                    </Grid>
+                </Border>
             </Canvas>
         </Grid>
     </Grid>
