--- a/work/Pages/PVP.xaml
+++ b/work/Pages/PVP.xaml
@@ -58,8 +58,7 @@
         <ImageBrush x:Key="chessBoardBackground" ImageSource="{StaticResource chessBoardImage}"/>
         <DropShadowEffect x:Key="DropShadowEffect" ShadowDepth="5" BlurRadius="10" Color="Gray" />
     </Page.Resources>
-
-    <Grid Background="#F0F0F0">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -83,21 +82,16 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <!--倒计时-->
-        <TextBlock Name="CountdownTextBlock1" Grid.Column="1" Grid.Row="3" Grid.RowSpan="2" Text="{Binding OurSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBlock Name="CountdownTextBlock2" Grid.Column="7" Grid.Row="3" Grid.RowSpan="2" Text="{Binding OppSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="7" Content="Player vs Player" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="30" FontWeight="Bold" Foreground="#4A8CCB"/>
-        <Button Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" Content="{Binding BackText, Mode=TwoWay, TargetNullValue=返回主页}" Style="{StaticResource ctrlButton}" Click="jumpBackToMain"/>
-        <Button Grid.Column="5" Grid.Row="7" Grid.ColumnSpan="2" Content="{Binding MatchText, Mode=TwoWay, TargetNullValue=开始匹配}" Style="{StaticResource ctrlButton}" Click="startToMatch"/>
-
-        <Grid x:Name="myCanvasFatherGrid" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="7" Grid.RowSpan="6">
-            <Border CornerRadius="30" BorderBrush="Transparent" BorderThickness="1" Background="#FF4A8CCB" Effect="{StaticResource DropShadowEffect}">
-                <Canvas x:Name="myCanvas"
-                        Background="{StaticResource chessBoardBackground}"
-                        MouseLeftButtonDown="myCanvas_MouseLeftButtonDown"
-                        SizeChanged="myCanvas_SizeChanged"
-                        Width="{Binding CanvasWidth}"
-                        Margin="112,0,112,0">
+        <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="7" Content="Player vs Player"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="30"/>
+        <Button Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" Content="返回主页" Style="{StaticResource ctrlButton}" Click="jumpBackToMain"/>
+        <Button Grid.Column="5" Grid.Row="7" Grid.ColumnSpan="2" Content="开始匹配" Style="{StaticResource ctrlButton}" Click="startToMatch"/>
+        <Grid x:Name="myCanvasFatherGrid" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="7" Grid.RowSpan="6" >
+            <Border CornerRadius="30" BorderBrush="Transparent" BorderThickness="1" Background="#FF4A8CCB">
+                <Canvas  x:Name="myCanvas"  
+                Background="{StaticResource chessBoardBackground}"
+                 MouseLeftButtonDown="myCanvas_MouseLeftButtonDown" 
+                 SizeChanged="myCanvas_SizeChanged"
+                 Width="{Binding CanvasWidth}" Margin="112,0,112,0">
 
                     <Grid Width="{Binding ActualWidth, ElementName=myCanvas}" Height="{Binding ActualHeight, ElementName=myCanvas}">
                         <Grid.RowDefinitions>
