--- a/work/App.xaml
+++ b/work/App.xaml
@@ -24,7 +24,9 @@
                 <Setter Property="WindowStyle" Value="None" />
                 <Setter Property="AllowsTransparency" Value="True" />
                 <Setter Property="Background" Value="Transparent" />
-                <Setter Property="Template">
+            <Setter Property="Height" Value="300"/>
+            <Setter Property="Width" Value="450"/>
+            <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Window}">
                             <Border CornerRadius="10" BorderThickness="1" Background="{DynamicResource BackgroundColor}" BorderBrush="{DynamicResource MainColor}">
@@ -34,8 +36,12 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-
-            <!--标题按钮样式-->
+        <Style x:Key="normalWindowStyle" TargetType="{x:Type Window}">
+            <Setter Property="Height" Value="450"/>
+            <Setter Property="Width" Value="800"/>
+            
+        </Style>
+        <!--标题按钮样式-->
             <Style x:Key="TitleButtonStyle" TargetType="{x:Type Button}">
                 <Setter Property="Width" Value="25" />
                 <Setter Property="Height" Value="25" />
